--- a/gapmindervr/index.html
+++ b/gapmindervr/index.html
@@ -83,10 +83,10 @@
       </div>
       <div class="col-sm-12 videoDemo">
         <div class="embed-responsive embed-responsive-16by9">
-          <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/gLHxcnhv3R8"></iframe>
+          <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/nDiyrQpmDa0"></iframe>
         </div>
       </div>
-      <a class="btn" href="demo/egocenter_graphe/index.html" target="_blank">Try demo</a>
+      <a class="btn" href="demo/railOfTime/index.html" target="_blank">Try demo</a>
     </div>
   </div>
 </div>
@@ -129,7 +129,7 @@
       </div>
       <div class="col-sm-12 videoDemo">
         <div class="embed-responsive embed-responsive-16by9" margin-bottom="20px">
-          <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/9TDK4T5ZfEE"></iframe>
+          <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/_jzoOV9hCDA"></iframe>
         </div>
       </div>
       <div class="col-sm-12">
