Renommage du dossier à 'railOfTime'.

--- a/point/railOfTime/index.html
+++ b/point/railOfTime/index.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Egocenter</title>
-    <meta name ="description" content="Egocenter - A-Frame">
+    <title>Rail of Time</title>
+    <meta name ="description" content="Rail of Time - A-Frame">
     <meta name="author" content="Niko Girardelli">
     <script src="https://aframe.io/releases/0.7.1/aframe.min.js"></script>
     <script src="https://cdn.rawgit.com/donmccurdy/aframe-extras/v3.13.1/dist/aframe-extras.min.js"></script>
