--- a/gapmindervr/index.html
+++ b/gapmindervr/index.html
@@ -145,6 +145,7 @@
   <h3>ABOUT</h3>
   <p>The GapminderVR experience was designed by Niko Girardelli in collaboration
 with Dara Aghamirkarimi, Béatrice Pudelko and <a href="https://lemire.me/en/">Daniel Lemire</a> at the University of Quebec (TELUQ). We acknowledge the support of the Natural Sciences and Engineering Research Council of Canada (NSERC), which invests annually over $1 billion in people, discovery and innovation.</p>
+<a href="https://www.teluq.ca/site/en/"><img src="img/logo_teluq_nb.png" width="20%"/></a> <a href="http://nserc-crsng.gc.ca/index_eng.asp"><img src="img/NSERC_B.jpg" width="20%"/></a>
 </div>
 
 
