--- a/gapmindervr/index.html
+++ b/gapmindervr/index.html
@@ -39,7 +39,7 @@
 <div id="welcome" class="bg-1">
   <div class="container">
     <h3 class="text-center">WELCOME</h3>
-    <p>We were impressed by Hans Rosling work and the Gapminder.org site. A fundamental part of this experience is the animation through time showing how the statistics evolved, sometimes in surprising ways. We present a version of this experience in WebVR where, instead of merely animating the visualization in a passive manner, we provide the user with the ability to control the flow of time by walking on a rail. Thus we capture the <a href="https://www.gapminder.org">original Gapminder experience</a> in an immersive manner.</p>
+    <p>We were impressed by <a href="https://en.wikipedia.org/wiki/Hans_Rosling">Hans Rosling</a> work and the <a href="https://www.gapminder.org">Gapminder.org site</a>. A fundamental part of this experience is the animation through time showing how the statistics evolved, sometimes in surprising ways. We present a version of this experience in virtual reality (VR) where, instead of merely animating the visualization in a passive manner, we provide the user with the ability to control the flow of time by walking on a rail. Thus we capture the <a href="https://www.gapminder.org">original Gapminder experience</a> in an immersive manner.</p>
     <br>
     <p><kbd>To experience GapminderVR, we recommend an HTC Vive connected to a suitable PC running a recent version of Firefox. However, <a href="https://webvr.info/">other browsers and headsets might work</a>.</kbd></p>
   </div>
@@ -95,7 +95,7 @@
 <div id="museum" class="bg-1">
   <div class="container">
     <h3 class="text-center">MUSEUM</h3>
-    <p>Museum is a VR demo where the user visit a museum where countries are the statues. The data affect their body and surronding, for example, their income is represented by a money sign. The richer the country is, the bigger the sign gets. We were motivated in part by <a href="https://ourworldindata.org">Our World in Data</a>.</p>
+    <p>Museum is a VR demo where the user visit a museum where countries are the statues. The data affect their body and surronding, for example, their income is represented by a money sign. The richer the country is, the bigger the sign gets. We were motivated in part by <a href="https://ourworldindata.org">Our World in Data</a> and by the concept of <a href="https://en.wikipedia.org/wiki/Glyph_(data_visualization)">glyph in data visualization</a> (e.g., <a href="https://en.wikipedia.org/wiki/Chernoff_face">Chernoff faces</a>).</p>
     <div class="row text-center">
       <div class="col-sm-4">
         <div class="thumbnail">
